--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <hr>
         <p class="about">I'm a 19 year old <b>designer</b> and <b>developer</b> based in Bellingham, Washington. I enjoy creating elegant and functional solutions with cutting edge technologies to solve interesting and relevant problems. I'm currently studying <b>Computer Science</b> at Western Washington University with a focus on <b>machine learning</b> and <b>big data</b>. In my free time, I enjoy <b>art</b>, <b>writing</b>, and am <b>slightly obsessed with cats</b>. You can view my projects and contact info below!</p>
         <hr>
-        <i class="fas fa-angle-double-down fa-5x"></i>
+        <i class="fas fa-arrow-down fa-5x"></i>
     </div>
 </div>
 
@@ -92,19 +92,15 @@
 
 <div class="row projects">
     <div class="col-lg-12">
-        <h1>Here are some things that I worked on.</h1>
+        <h1>Here are my favorite projects:</h1>
     </div>
 
-    <div class="row">
-        <div class="col-lg-6">
-            <div class="project-card">
+            <div class="campus-corners">
                 <p><b>Campus Corners</b> is a simple nodeJS made to make a large, intimidating campus feel a little bit more like home. Upperclassmen can submit cool, lesser known places tha they've discovered through the years - study spots, napping places, and everything in between. Built with NodeJS, Express, and some other basic stuff.</p>
             </div>
-        </div>
         <div class="col-lg-6">
             <p><b>100.</b> is a simple habit tracker and productivity app inspired by the #100DaysOfCode challenge on social media. Users can track as many habits as they want, and are encouraged to practice each habit a bit every day for at least 100 days.</p>
         </div>
-    </div>
     
 </div>
 
@@ -197,11 +193,6 @@
         origin: 'left',
         viewFactor: 0.3
     }, 300);
-
-    sr.reveal('.skills', { 
-        duration: 1000,
-        origin: 'left'
-    });
 
     sr.reveal('.bonus-section', { 
         duration: 1000,
