--- a/index.html
+++ b/index.html
@@ -23,40 +23,54 @@
 
     <!-- LANDING PAGE -->
 <section class="1">
+    <div id="particles-js"></div>
     <div class="landing">
         <div class="landing-title">
             <h1>dan</h1>
         </div>
-        <div class="landing-subtitle">
-            <h2>design & develop</h2>
-        </div>
     </div>
 </section>
 
+<div class="spacer"></div>
 
 <!-- ABOUT ME -->
 
-<section class="2">
+<section>
     <div class="about">
-        <h3>Daniel King is a Taiwanese-American designer, developer, and student based in Bellingham, Washington. He is a believer in designing with intention and a strong advocate for inclusivity and diversity in STEM fields. Someday, he hopes to become a cat owner. Currently a computer science student at Western Washington University.</h3>
-        <hr>
+        <div class="window"></div>
+        <div class="about-bio">
+            <div class="about-tagline">
+                <h3>designer & developer</h3>
+            </div>
+            <div class="about-content">
+                <h2 class="about-content-emphasis">I'm Dan, a designer, developer, and student based in Bellingham, Washington.</h2>
+                <hr>
+                <h2>I'm passionate about user-centered design and the technology upon which it is built. As a current computer science student and a self-studying designer, I strive to create elegant  and accessible online experiences.</h2>
+                <h2>I'm currently employed as a web designer for WWU University Residences. In my free time, I enjoy hiking and coffee - the basic PNW pasttimes. Someday, I hope to become a cat owner.</h2>
+                <h2>hit me up.</h2>
+            </div>
+        </div>
     </div>
 </section>
 
 
-<section class="3">
-    <div class="skills">
-        <div class="skills-web">
-            <div class="skills-header-web">
-                <h1>web!</h1>
+<section>
+    <div class="skills-container">
+        <div class="skills">
+            <div class="skills-web">
+                <div class="skills-header-web">
+                    <h1>i. web</h1>
+                </div>
             </div>
-            <div class="skills-content-web">
+            <div class="skills-code">
+                <div class="skills-content-code">
+                    <h1>ii. code</h1>
+                </div>
+            </div>
+            <div class="skills-design">
             </div>
         </div>
-        <div class="skills-code">
-        </div>
-        <div class="skills-design">
-        </div>
+        <div class="skills-content"></div>
     </div>
 </section>
 
@@ -78,8 +92,8 @@
 
 
 <!-- SCRIPTS -->
+    <script src="js/particles.js"></script>
     <script type="text/javascript">
-
 
     </script>
 </body>
