hhh idk i give up

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
     <nav>
         <ul>
-            <a href=""><li>00. home</li></a>
-            <a href=""><li>01. about</li></a>
-            <a href=""><li>02. skills</li></a>
-            <a href=""><li>03. selected works</li></a>
-            <a href=""><li>04. contact</li></a>
+            <a href="#landing"><li>00. home</li></a>
+            <a href="#about"><li>01. about</li></a>
+            <a href="#skills"><li>02. skills</li></a>
+            <a href="#"><li>03. selected works</li></a>
+            <a href="#contact"><li>04. contact</li></a>
         </ul>
     </nav>
 
@@ -115,6 +115,7 @@ online experiences using...</h3>
 
 
     <script src="js/rellax.min.js"></script>
+    <script src="zenscroll-min.js"></script>
     <script type="text/javascript">
       var rellax = new Rellax('.rellax', {
         speed: 2
