--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         
     </script>
     <script type="text/javascript">
-            var text = ["TEMPORARY", "EPHEMERAL", "A PLACEHOLDER", "PRETENTIOUS", "BY DANIEL", "A PERSONAL SITE" ];
+            var text = ["TEMPORARY", "EPHEMERAL", "A PLACEHOLDER", "MINIMAL", "BY DANIEL", "A PERSONAL SITE", "DISGUSTANG", "IMPERMANENT", "INTERIM", "SHORT TERM", "PRETENTIOUS" ];
       
         setTimeout(() => { 
             var i = 0;
