--- a/mental-reminder.html
+++ b/mental-reminder.html
@@ -113,6 +113,11 @@
                     <p>We found that there were <strong>no 100% free apps</strong> with a <strong>friendly, intuitive user experience</strong> to simply remind users of short term things to come. </p>
                 </div>
 
+                <div class="m3">
+                    <h3 class="mental-reminder-accent">User Personas</h3>
+                    <img class="m3" src="./assets/mental-reminder/persona1.png" width="80%"></img>
+                    <img class="m3" src="./assets/mental-reminder/persona2.png" width="80%"></img>
+                </div>
 
             </div>
 
@@ -158,7 +163,7 @@
 
                 <div class="prototype" id="prototyping">
                     <h2>Prototyping - </h2>
-                    <p class="m3">Once we had our interaction paradigms and general app flow locked down, it was time to get into prototyping. Typically, I'd work with a lower fidelity functional prototype and move on from there, but since the core identity of our app is based on 'look and feel', higher fidelity prototypes were necessary from the get-go. Luckily, since the app is designed to be minimal with few screens, this decision didn't end up eating too much of our team's resources. </p>
+                    <p class="m3">Once we had our interaction paradigms and general app flow locked down, it was time to get into prototyping. Typically, I'd work with a lower fidelity functional prototype and move on from there, but since the core identity of our app is based on 'look and feel', higher fidelity prototypes were necessary from the get-go. <em>Luckily, since the app is designed to be minimal with few screens, this decision didn't end up eating too much of our team's resources.</em> </p>
                     <p class="m3">We then set out to validate our initial design choices with a very preliminary and casual phase of user testing. Since a lot of friends and family members fall under the target demographics of this app, I conducted 2-3 casual interviews to gauge what was working and what wasn't. </p>
                     <img src="./assets/mental-reminder/early-proto.png"  class="m3"   width="70%"></img>
 
