--- a/index.html
+++ b/index.html
@@ -44,11 +44,19 @@
 
 
     <nav>
-        <ul>
-            <li><a href="#section-one">ABOUT</a></li>
-            <li><a href="#section-two">WORKS </a></li>
-            <li><a href="#section-three">CONTACT</a></li>
-        </ul>
+        <input type="checkbox" id="nav" class="hidden">
+        <label for="nav" class="nav-btn">
+            <i></i>
+            <i></i>
+            <i></i>
+        </label>
+        <div class="nav-wrapper">
+            <ul>
+                <li><a href="#section-one">ABOUT</a></li>
+                <li><a href="#section-two">WORKS </a></li>
+                <li><a href="#section-three">CONTACT</a></li>
+            </ul>
+        </div>
     </nav>
 
     <div class="landing">
@@ -75,7 +83,7 @@
                 </a>
                 </div>
                 <div data-aos="fade-in" data-aos-duration="950" class="button fill" type="button">
-                <a href="">
+                <a href="./assets/RESUME.pdf" target="_blank">
                     RESUME
                 </a>
                 </div>
@@ -113,12 +121,12 @@
         </div>
 
         <div class="work-box work-3">
-            <a href="./exchange.html">
+            <a href="./wta.html">
                 <div class="inner-box inner-work-3">
                     <div class="select-works-text">
-                        <h3>EXCHANGE</h3>
-                        <p><small>Personal Project &#9679; UX Designer, Case Study</small></p>
-                        <p>An app concept to bring niche hobby communities closer <br> through a dedicated platform for buying, selling, and trading.</p>
+                        <h3>WTA App Concept</h3>
+                        <p><small>School Project &#9679; UX Designer, Case Study</small></p>
+                        <p>Designed a first-party mobile app for finding route information<br> and trip planning with strong WTA branding.</p>
                     </div>
                 </div>
             </a>
@@ -131,39 +139,45 @@
     </div>
     <div class="work-wrapper">
 
-        <div class="work">
-            <h5>DAILY</h5>
-        </div>
 
         <div class="work">
-            <h5>WTA APP CONCEPT</h5>
+            <a href="https://www.behance.net/gallery/110527603/EXCHANGE-App-Concept" target="_blank">
+                <h5>EXCHANGE UX CONCEPT</h5>
+            </a>
         </div>
 
         <div class="work">
             <h5>KOTO DSGN CONCEPT</h5>
         </div>
 
-        <div class="work">
-            <h5>RAMA WORKS WEBSITE REDESIGN</h5>
-        </div>
 
         <div class="work">
-            <h5>WWU x ACM WEBSITE</h5>
+            <a href="https://acm-wwu.github.io/" target="_blank">
+                <h5>WWU x ACM WEBSITE</h5>
+            </a>
         </div>
+
     </div>
 
     <div class="contact" id="section-three">
-        <h2>CONTACT</h2>
-        <h5><em>LET'S BUILD SOMETHING</em></h5>
+
+        <h2>Thanks for scrolling!  &#128591;</h2>
+        <h3><em>Get in touch - let's build something cool.</em></h3>
+
+        <div class="links">
+            <ul>
+                <li><a href="https://www.linkedin.com/in/daniel-king-8050aa150/" target="_blank">LinkedIn</a></li>
+                <li><a href="https://github.com/kingce" target="_blank">Github</a></li>
+                <li><a href="https://www.behance.net/danielking9" target="_blank">Behance</a></li>
+                <li><a href="mailto:chuan.e.king@gmail.com" target="_blank">Shoot me an email</a></li>
+            </ul>
+        </div>
+
     </div>
 
-    <div class="linkbox">
-        <div class="small-linkbox">
-            <h4><a href="" target="_blank">Git</a></h4>
-            <h4><a href="" target="_blank">Ln</a></h4>
-            <h4><a href="" target="_blank">Be</a></h4>
-        </div>
-    </div>
+    <footer>
+        <p>&#169; DESIGNED AND DEVELOPED BY DANIEL KING 2020</p>
+    </footer>
 
 
 
