--- a/move-in.html
+++ b/move-in.html
@@ -18,16 +18,6 @@
     </head>
 
     <body>
-        <div class="menu">
-            <h5 class="move-in-accent">CONTENTS</h5>
-            <ul>
-                <li><a href="#brief">BRIEF</a></li>
-                <li><a href="#ideation">IDEATION</a></li>
-                <li><a href="#wireframing">WIREFRAMING</a></li>
-                <li><a href="#prototyping">PROTOTYPING</a></li>
-                <li><a href="#reflection">REFLECTION</a></li>
-            </ul>
-        </div>
 
         <div class="back-button">
             <i class="fas fa-arrow-left"></i>
@@ -111,11 +101,11 @@
                 <p class="m3"><strong> Despite this not being the most aesthetically striking project, I'm proud of the work we did over those two weeks.</strong> This was my first proper UX project outside of case studies, and I felt like I learned a lot about the process as well as what it meant to collaborate with others in a creative, collaborative environment to meet deadlines. I was satisfied with the overall process and how we approached the design challenge. However,
                 looking back, I think there were a few things that I would have changed: </p>
 
-                <h3 class="move-in-accent">The Tools</h3>
+                <h3 class="m3 move-in-accent">The Tools</h3>
                 <p class="m3"> Since the other designers had their own fair share of projects at the time, I was solely responsible for producing high fidelity prototypes. Since speed was a concern, I defaulted to using Illustrator at the time since that was what I was most comfortable with. However, this made small edits and collaboration a lot more difficult, as not everyone had illustrator.</p>
                 <p class="m3"><em>In retrospect, using Figma would have saved us a lot more time, despite my inexperience with that tool.</em> Figma is free and web based, which would have allowed the developers to chip in and edit during standups. Additionally, Figma's built-in CSS tools would have made the handoff a lot simpler as well.</p>
 
-                <h3 class="move-in-accent">The Platform</h3>
+                <h3 class="m3 move-in-accent">The Platform</h3>
                 <p class="m3">There's not much to say here except that the majority of our time was spent on the mobile application. This made intuitive sense, since most people logging in the day of would be unlikely to be doing so on a desktop/laptop - the move-in user flow was intended to be experienced on mobile. However, this led us to neglect the desktop views in favor of polishing the mobile views a lot more. This is unfortunate, since a lot of people would most likely schedule
                 their arrival on a computer.</p>
                 <p class="m3">If I had more time, I would have designated someone to focus on the desktop view a little bit more and spent some more manpower/resources on polishing those up to the same level that we polished the mobile views.</p>
@@ -125,7 +115,18 @@
         </div>
 
         <div class="end-card">
-            <h2>Thanks for scrolling! &#128591;</h2>
+            <h2>Thanks for scrolling!  &#128591;</h2>
+            <div class="end-links">
+                <div class="end-card-button">
+                    <a  href="./index.html">Take me home</a>
+                </div>
+                <p>Other projects: </p>
+                <div class="end-projects">
+                    <a href="">Mental Reminder</a>
+                    <a href="./move-in.html">Move-In App</a>
+                    <a href="./wta.html">WTA App Concept</a>
+                </div>
+            </div>
         </div>
 
     </body>
