--- a/index.html
+++ b/index.html
@@ -147,7 +147,9 @@
         </div>
 
         <div class="work">
-            <h5>KOTO DSGN CONCEPT</h5>
+            <a href="https://mgoss489.github.io/portfolio/" target="_blank">
+                <h5>M. GOSS PORTFOLIO</h5>
+            </a>
         </div>
 
 
