--- a/mental-reminder.html
+++ b/mental-reminder.html
@@ -211,7 +211,7 @@
             <div class="end-links">
                 <div class="end-card-button">
                     <a  href="./index.html">Take me home</a>
-                </div
+                </div>
                 <p>Other projects: </p>
                 <div class="end-projects">
                     <a href="">Mental Reminder</a>
