--- a/move-in.html
+++ b/move-in.html
@@ -122,8 +122,8 @@
                 </div>
                 <p>Other projects: </p>
                 <div class="end-projects">
-                    <a href="">Mental Reminder</a>
-                    <a href="./move-in.html">Move-In App</a>
+                    <a href="./mental-reminder.html">Mental Reminder</a>
+                    <a href="">Move-In App</a>
                     <a href="./wta.html">WTA App Concept</a>
                 </div>
             </div>
