fixed broken link

--- a/wta.html
+++ b/wta.html
@@ -173,7 +173,7 @@
                 </div>
                 <p>Other projects: </p>
                 <div class="end-projects">
-                    <a href="">Mental Reminder</a>
+                    <a href="./mental-reminder.html">Mental Reminder</a>
                     <a href="./move-in.html">Move-In App</a>
                     <a href="./wta.html">WTA App Concept</a>
                 </div>
